@@ -106,22 +106,30 @@ Ext.extend(GoodNews.ImportPanel,MODx.FormPanel,{
     }
     ,getButtons: function() {
         var buttons = [];
+        // Plugin version
+        buttons.push('-',{
+            xtype: 'tbtext'
+            ,html: '<i>'+GoodNews.config.componentVersion+'-'+GoodNews.config.componentRelease+'</i>'
+        },'-')
+        // Start Import button
         buttons.push({
-            text: _('goodnews.import_subscribers_button_start')
+            text: (GoodNews.config.legacyMode ? '' : '<i class="icon icon-download icon-lg"></i>&nbsp;') + _('goodnews.import_subscribers_button_start')
             ,id: 'button-import-start'
             ,cls: 'primary-button'
             ,handler: this.startSubscriberImport
             ,scope: this
         },'-')
+        // Close Import button
         buttons.push({
-            text: _('goodnews.import_close_button')
+            text: (GoodNews.config.legacyMode ? '' : '<i class="icon icon-arrow-circle-left icon-lg"></i>&nbsp;') + _('goodnews.import_close_button')
             ,id: 'button-import-close'
             ,iconCls: GoodNews.config.legacyMode ? 'gon-icn-close' : ''
             ,handler: this.closeImport
             ,scope: this
         },'-')
+        // Help button
         buttons.push({
-            text: _('help_ex')
+            text: (GoodNews.config.legacyMode ? '' : '<i class="icon icon-question-circle icon-lg"></i>&nbsp;') + _('help_ex')
             ,id: 'button-help'
             ,iconCls: GoodNews.config.legacyMode ? 'gon-icn-help' : ''
             ,handler: function(){
